# opengl_cpp

./: CMakeLists.txt  main.cpp
gl/: Cube.cpp  Cube.h  CubeRenderer.cpp  CubeRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureInstance.cpp  TextureInstance.h  gl.cpp  gl.h
glad/: glad.c
io/: io.cpp  io.h  stb_image.h
resources/shaders/: default_texture.frag  default_texture.vert
resources/shaders/circle/: shader.frag  shader.geom  shader.vert
resources/shaders/line/: shader.geom  shader.vert
resources/shaders/texture/: default_texture.vert
shaders/: shader.vert
window/: window.cpp  window.h
